chore: add NEXT_STEPS.md and todo updates

--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Yaya Starchild — Whimsical Poet</title>
+  <meta name="description" content="Yaya Starchild — whimsical poet. New book 'Suncatcher Spirit' out October 25th, 2025. Poetry for dreamers and women of color." />
+  <meta property="og:title" content="Yaya Starchild — Suncatcher Spirit" />
+  <meta property="og:description" content="Suncatcher Spirit — a tender collection of poems. Out Oct 25, 2025." />
+  <meta property="og:image" content="assets/suncatcher-1.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="/favicon.ico">
+    <script defer src="app.js"></script>
+    <script defer src="products.js"></script>
+  </head>
+  <body>
+    <a class="skip-link" href="#main">Skip to content</a>
+    <header class="site-header">
+      <nav aria-label="Main navigation" class="top-nav">
+      <div class="brand">
+        <a href="index.html"><img src="logo.svg" alt="Yaya Starchild logo" class="logo"/></a>
+        <div>
+          <h1>Yaya Starchild</h1>
+          <p class="tag">Whimsical poet who hopes to leave you enchanted.</p>
+        </div>
+      </div>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="shop.html">Shop</a>
+        <a href="about.html">About the Author</a>
+        <a href="cart.html" id="nav-cart">Cart (<span id="nav-cart-count">0</span>)</a>
+      </nav>
+    </header>
+
+  <main id="main" class="container hero" role="main">
+      <section class="hero-left">
+        <h2 class="eyebrow">New Release</h2>
+        <h3 class="title">Suncatcher Spirit</h3>
+        <p class="lead">A tender, pastel-stitched collection of poems about light, belonging, and the small magic between breaths. Out October 25th, 2025.</p>
+        <div class="cta-row">
+          <a class="btn primary" href="product.html?id=1">Pre-order the Book</a>
+          <a class="btn ghost" href="shop.html">See Shop</a>
+        </div>
+      </section>
+      <aside class="hero-right">
+        <img src="assets/suncatcher-1.jpg" alt="Suncatcher Spirit cover" class="cover"/>
+      </aside>
+    </main>
+
+    <section class="container features">
+      <article>
+        <h4>Enchanting readings</h4>
+        <p>Join Yaya for intimate readings and seasonal newsletters for early access to new poems and merch.</p>
+      </article>
+      <article>
+        <h4>For women of color</h4>
+        <p>Stories and verses rooted in lived experience — soft, bold, and affirming.</p>
+      </article>
+      <article>
+        <h4>Signed copies</h4>
+        <p>Limited signed edition of Suncatcher Spirit available for pre-order.</p>
+      </article>
+    </section>
+
+    <footer class="site-footer">
+      <footer role="contentinfo">
+      <div class="container footer-grid">
+        <div>
+          <h5>About Yaya</h5>
+          <p>Yaya Starchild writes small, luminous poems for readers who collect light. Connect through the newsletter.</p>
+        </div>
+        <div>
+          <h5>Newsletter</h5>
+          <form id="newsletter-form" class="form-inline">
+            <input type="email" id="newsletter-email" placeholder="Your email" aria-label="Email" required />
+            <button class="btn" type="submit">Join</button>
+          </form>
+        </div>
+        <div>
+          <h5>Follow</h5>
+          <p><a href="#">Instagram</a> · <a href="#">Twitter</a></p>
+        </div>
+      </div>
+      <p class="copy">© 2025 Yaya Starchild — All rights reserved.</p>
+    </footer>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Organization",
+          "name": "Yaya Starchild",
+          "url": "http://example.com",
+          "logo": "http://example.com/logo.svg"
+        },
+        {
+          "@type": "WebSite",
+          "url": "http://example.com",
+          "name": "Yaya Starchild",
+          "potentialAction": {"@type":"SearchAction","target":"http://example.com/search?q={search_term_string}","query-input":"required name=search_term_string"}
+        },
+        {
+          "@type":"Book",
+          "name":"Suncatcher Spirit",
+          "author":{"@type":"Person","name":"Yaya Starchild"},
+          "datePublished":"2025-10-25",
+          "description":"A collection of luminous poems by Yaya Starchild."
+        }
+      ]
+    }
+    </script>
+  </body>
+</html>
 here
