--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <title>Cart — Yaya Starchild</title>
   <meta name="description" content="Your cart" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="icon" href="/favicon.ico">
     <script defer src="app.js"></script>
@@ -29,19 +30,23 @@
     </header>
 
   <main id="main" class="container" role="main">
-      <h2>Your Cart</h2>
-      <section id="cart-contents" class="cart-contents">
+      <h2 class="reveal"><i class="fas fa-shopping-bag"></i> Your Enchanted Cart</h2>
+      <p class="lead reveal">Review your magical treasures before checkout. Remember to use a discount code for extra sparkle!</p>
+      <section id="cart-contents" class="cart-contents reveal-scale">
         <!-- cart rendered by app.js -->
       </section>
-      <div class="cart-actions">
-        <input id="discount-code" placeholder="Discount code" />
-        <button id="apply-discount" class="btn">Apply</button>
-        <a href="checkout.html" class="btn primary">Checkout</a>
+      <div class="cart-actions reveal">
+        <input id="discount-code" placeholder="Enter magic code (SUN10, FAIRY5, MAGIC15) ✨" />
+        <button id="apply-discount" class="btn ghost"><i class="fas fa-tag"></i> Apply Code</button>
+        <a href="checkout.html" class="btn primary"><i class="fas fa-credit-card"></i> Proceed to Checkout</a>
       </div>
+      <p style="margin-top:1.5rem; font-style:italic; text-align:center;" class="reveal"><i class="fas fa-truck"></i> Free shipping on orders over $50 | <i class="fas fa-gift"></i> Gift wrapping available at checkout</p>
     </main>
 
     <footer class="site-footer">
-      <p class="copy">© 2025 Yaya Starchild</p>
+      <div class="container">
+        <p class="copy">© 2025 Yaya Starchild • Pastel Poetics • Made with magic <i class="fas fa-wand-sparkles"></i> and stardust <i class="fas fa-star"></i></p>
+      </div>
     </footer>
 
     <script defer src="products.js"></script>
