--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
     <title>Checkout — Yaya Starchild</title>
   <meta name="description" content="Checkout page" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="icon" href="/favicon.ico">
     <script defer src="app.js"></script>
@@ -29,47 +30,79 @@
     </header>
 
   <main id="main" class="container" role="main">
-      <h2>Checkout</h2>
-      <form id="checkout-form" class="checkout-form">
-        <div class="form-grid">
-          <label>
-            Full name
-            <input type="text" id="fullname" required />
-          </label>
-          <label>
-            Email
-            <input type="email" id="email" required />
-          </label>
-          <label>
-            Address
-            <input type="text" id="address" required />
-          </label>
-          <label>
-            City
-            <input type="text" id="city" required />
-          </label>
-        </div>
+      <h2 class="reveal"><i class="fas fa-magic"></i> Magical Checkout</h2>
+      <p class="lead reveal">Complete your order and bring a little more magic into the world. Your purchase supports independent art and poetry.</p>
+      
+      <div style="display:grid; grid-template-columns:1.5fr 1fr; gap:1.5rem; align-items:start;">
+        <form id="checkout-form" class="checkout-form reveal-left" style="background:var(--glass); backdrop-filter:blur(20px); padding:1.5rem; border-radius:var(--radius); border:1px solid rgba(255,255,255,0.25);">
+          <h3>🌟 Shipping Information</h3>
+          <div style="display:grid; gap:0.8rem; margin-bottom:1.5rem;">
+            <label style="display:block;">
+              <span style="display:block; margin-bottom:0.4rem; font-weight:600;">Full Name</span>
+              <input type="text" id="fullname" placeholder="Your magical name ✨" required />
+            </label>
+            <label style="display:block;">
+              <span style="display:block; margin-bottom:0.4rem; font-weight:600;">Email</span>
+              <input type="email" id="email" placeholder="your@email.com" required />
+            </label>
+            <label style="display:block;">
+              <span style="display:block; margin-bottom:0.4rem; font-weight:600;">Address</span>
+              <input type="text" id="address" placeholder="Street address" required />
+            </label>
+            <label style="display:block;">
+              <span style="display:block; margin-bottom:0.4rem; font-weight:600;">City & ZIP</span>
+              <input type="text" id="city" placeholder="City, State ZIP" required />
+            </label>
+          </div>
 
-        <h3>Payment</h3>
-        <div class="payment-methods">
-          <label><input type="radio" name="pay" value="card" checked /> Card</label>
-          <label><input type="radio" name="pay" value="paypal" /> PayPal</label>
-        </div>
+          <h3>💳 Payment Method</h3>
+          <div class="payment-methods" style="display:flex; gap:1.5rem; margin:1rem 0 1.25rem 0;">
+            <label style="display:flex; align-items:center; gap:0.5rem; cursor:pointer;">
+              <input type="radio" name="pay" value="card" checked /> 
+              <span>💳 Card</span>
+            </label>
+            <label style="display:flex; align-items:center; gap:0.5rem; cursor:pointer;">
+              <input type="radio" name="pay" value="paypal" /> 
+              <span>🅿️ PayPal</span>
+            </label>
+          </div>
 
-        <div id="card-fields">
-          <label>Card number <input id="card-number" placeholder="4242 4242 4242 4242" /></label>
-          <label>CVC <input id="card-cvc" placeholder="123" /></label>
-        </div>
+          <div id="card-fields" style="display:grid; gap:0.8rem; margin-bottom:1.5rem;">
+            <label style="display:block;">
+              <span style="display:block; margin-bottom:0.4rem; font-weight:600;">Card Number</span>
+              <input id="card-number" placeholder="4242 4242 4242 4242" />
+            </label>
+            <label style="display:block;">
+              <span style="display:block; margin-bottom:0.4rem; font-weight:600;">CVC</span>
+              <input id="card-cvc" placeholder="123" style="width:120px;" />
+            </label>
+          </div>
 
-        <button class="btn primary" id="place-order">Place Order</button>
-      </form>
-      <aside class="order-summary" id="order-summary">
-        <!-- summary rendered by app.js -->
-      </aside>
+          <label style="display:flex; align-items:center; gap:0.8rem; margin:1.25rem 0;">
+            <input type="checkbox" id="gift-wrap" />
+            <span>🎁 Add gift wrapping (+$5) — includes handwritten note and sparkle confetti</span>
+          </label>
+
+          <button class="btn primary" id="place-order" style="width:100%; font-size:1.2rem; padding:1rem;"><i class="fas fa-wand-magic-sparkles"></i> Complete Your Order</button>
+          <p style="text-align:center; margin-top:1rem; font-size:0.95rem; opacity:0.9;"><i class="fas fa-lock"></i> Secure checkout powered by Stripe & PayPal</p>
+        </form>
+
+        <aside class="order-summary reveal-right" id="order-summary" style="background:var(--glass); backdrop-filter:blur(20px); padding:1.5rem; border-radius:var(--radius); border:1px solid rgba(255,255,255,0.25); position:sticky; top:2rem;">
+          <h3><i class="fas fa-box"></i> Order Summary</h3>
+          <!-- summary rendered by app.js -->
+          <div style="margin-top:1.5rem; padding-top:1.5rem; border-top:1px solid rgba(255,255,255,0.2);">
+            <p style="font-size:0.95rem; line-height:1.6;"><i class="fas fa-bookmark"></i> Every order includes a bookmark with an exclusive poem</p>
+            <p style="font-size:0.95rem; line-height:1.6;"><i class="fas fa-truck"></i> Free shipping on orders $50+</p>
+            <p style="font-size:0.95rem; line-height:1.6;"><i class="fas fa-clock"></i> Ships within 2-3 business days</p>
+          </div>
+        </aside>
+      </div>
     </main>
 
     <footer class="site-footer">
-      <p class="copy">© 2025 Yaya Starchild</p>
+      <div class="container">
+        <p class="copy">© 2025 Yaya Starchild • Pastel Poetics • Made with magic <i class="fas fa-wand-sparkles"></i> and stardust <i class="fas fa-star"></i></p>
+      </div>
     </footer>
 
     <script defer src="products.js"></script>
