--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:image" content="assets/suncatcher-1.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="manifest" href="/manifest.webmanifest">
   <link rel="icon" href="/favicon.ico">
     <script defer src="app.js"></script>
@@ -18,7 +19,6 @@
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
     <header class="site-header">
-      <nav aria-label="Main navigation" class="top-nav">
       <div class="brand">
         <a href="index.html"><img src="logo.svg" alt="Yaya Starchild logo" class="logo"/></a>
         <div>
@@ -35,56 +35,92 @@
     </header>
 
   <main id="main" class="container hero" role="main">
-      <section class="hero-left">
-        <h2 class="eyebrow">New Release</h2>
+      <section class="hero-left reveal-left">
+        <h2 class="eyebrow"><i class="fas fa-crown"></i> New Release <i class="fas fa-crown"></i></h2>
         <h3 class="title">Suncatcher Spirit</h3>
-        <p class="lead">A tender, pastel-stitched collection of poems about light, belonging, and the small magic between breaths. Out October 25th, 2025.</p>
+        <p class="lead">A marriage of higher-self discovery and inner-child love — a sprinkle of fairy dust to reacquaint yourself with your childlike wonder. This debut collection invites you to stop and listen to the birds when you struggle to see the forest through the trees. Return to nature and your sense of whimsy with playfully-introspective metaphors, colorful illustrations, and incantations you can whisper whenever you need a reminder of your magic.</p>
         <div class="cta-row">
-          <a class="btn primary" href="product.html?id=1">Pre-order the Book</a>
-          <a class="btn ghost" href="shop.html">See Shop</a>
+          <a class="btn primary" href="#buy-links"><i class="fas fa-wand-magic-sparkles"></i> Get Your Copy</a>
+          <a class="btn ghost" href="shop.html"><i class="fas fa-shop"></i> Explore Merch</a>
         </div>
       </section>
-      <aside class="hero-right">
-        <img src="assets/suncatcher-1.jpg" alt="Suncatcher Spirit cover" class="cover"/>
+      <aside class="hero-right reveal-right">
+        <img src="assets/suncatcher-1.jpg" alt="Suncatcher Spirit cover glowing with ethereal light" class="cover"/>
       </aside>
     </main>
 
     <section class="container features">
-      <article>
-        <h4>Enchanting readings</h4>
-        <p>Join Yaya for intimate readings and seasonal newsletters for early access to new poems and merch.</p>
+      <article class="reveal">
+        <h4><i class="fas fa-book-open-reader"></i> Enchanting Poetry</h4>
+        <p>64 pages of luminous verses exploring love, loss, resilience, and present-moment magic. Featuring playful nursery rhymes, introspective metaphors, and personal incantations to remind you of your inherent wonder.</p>
       </article>
-      <article>
-        <h4>For women of color</h4>
-        <p>Stories and verses rooted in lived experience — soft, bold, and affirming.</p>
+      <article class="reveal">
+        <h4><i class="fas fa-heart"></i> For Dreamers & Hearts</h4>
+        <p>Written by a queer artist from St. Louis, this collection honors lived experiences with tenderness and whimsy. Perfect for readers who collect light and believe in the romance woven into life's simplicities.</p>
       </article>
-      <article>
-        <h4>Signed copies</h4>
-        <p>Limited signed edition of Suncatcher Spirit available for pre-order.</p>
+      <article class="reveal">
+        <h4><i class="fas fa-star"></i> Available Now</h4>
+        <p>Paperback ($19.99) and eBook ($9.99) available at Amazon, Barnes & Noble, and Walmart. Published October 25, 2025 by Pastel Poetics.</p>
       </article>
     </section>
 
+    <section class="container reveal-scale" style="margin-top:2rem; background:var(--glass); backdrop-filter:blur(20px); padding:2rem; border-radius:var(--radius); border:1px solid rgba(255,255,255,0.25);">
+      <h2 style="text-align:center; margin-bottom:1.5rem;"><i class="fas fa-heart"></i> What Readers Are Saying</h2>
+      <div style="display:grid; grid-template-columns:repeat(auto-fit, minmax(300px, 1fr)); gap:1.5rem;">
+        <blockquote class="reveal" style="background:rgba(255,255,255,0.1); padding:1.25rem; border-radius:15px; border-left:3px solid rgba(255,255,255,0.4);">
+          <p style="font-style:italic; margin-bottom:0.8rem; line-height:1.6;">"...a tender, luminous collection that feels both grounding and uplifting...one of those books you can return to again and again..."</p>
+          <footer style="font-size:0.9rem; opacity:0.9;">— Moon Sisters Book Club</footer>
+        </blockquote>
+        <blockquote class="reveal" style="background:rgba(255,255,255,0.1); padding:1.25rem; border-radius:15px; border-left:3px solid rgba(255,255,255,0.4);">
+          <p style="font-style:italic; margin-bottom:0.8rem; line-height:1.6;">"...a delightful collection of poetry that balances a playful tone with surprisingly deep themes..."</p>
+          <footer style="font-size:0.9rem; opacity:0.9;">— Ingrid</footer>
+        </blockquote>
+        <blockquote class="reveal" style="background:rgba(255,255,255,0.1); padding:1.25rem; border-radius:15px; border-left:3px solid rgba(255,255,255,0.4);">
+          <p style="font-style:italic; margin-bottom:0.8rem; line-height:1.6;">"...I highly recommend bringing this book into nature with you..."</p>
+          <footer style="font-size:0.9rem; opacity:0.9;">— Adriana Auch</footer>
+        </blockquote>
+      </div>
+    </section>
+
+    <section id="buy-links" class="container reveal-scale" style="margin-top:2rem; background:var(--glass); backdrop-filter:blur(20px); padding:2rem; border-radius:var(--radius); border:1px solid rgba(255,255,255,0.25);">
+      <h2 style="text-align:center; margin-bottom:1.5rem;"><i class="fas fa-castle"></i> Get Your Copy</h2>
+      <div style="display:grid; grid-template-columns:repeat(auto-fit, minmax(250px, 1fr)); gap:1.5rem;">
+        <a href="https://www.amazon.com/Suncatcher-Spirit-Poems-Yaya-Starchild-ebook/dp/B0FPBS1M13" target="_blank" class="btn primary" style="text-align:center; display:block;"><i class="fab fa-amazon"></i> Amazon (eBook)</a>
+        <a href="https://www.barnesandnoble.com/w/suncatcher-spirit-yaya-starchild/1148463776" target="_blank" class="btn primary" style="text-align:center; display:block;"><i class="fas fa-book"></i> Barnes & Noble</a>
+        <a href="https://www.walmart.com/ip/Suncatcher-Spirit-Paperback-9798999932204/17998666371" target="_blank" class="btn primary" style="text-align:center; display:block;"><i class="fas fa-shopping-cart"></i> Walmart</a>
+      </div>
+      <p style="text-align:center; margin-top:1.5rem; font-style:italic;"><i class="fas fa-sparkles"></i> Paperback: $19.99 | eBook: $9.99 <i class="fas fa-sparkles"></i></p>
+    </section>
+
     <footer class="site-footer">
-      <footer role="contentinfo">
       <div class="container footer-grid">
         <div>
-          <h5>About Yaya</h5>
-          <p>Yaya Starchild writes small, luminous poems for readers who collect light. Connect through the newsletter.</p>
+          <h5><i class="fas fa-feather"></i> About Yaya</h5>
+          <p>Yaya is a queer artist from St. Louis, MO. She picked up a pen for solace at age eight and never looked back. Her poetry explores the romance and whimsy woven into life's intricacies—touching on love, loss, resilience, and the present moment.</p>
         </div>
         <div>
-          <h5>Newsletter</h5>
+          <h5><i class="fas fa-envelope-open-text"></i> Newsletter</h5>
+          <p>Subscribe for enchanted updates, new releases, and exclusive magical offerings.</p>
           <form id="newsletter-form" class="form-inline">
-            <input type="email" id="newsletter-email" placeholder="Your email" aria-label="Email" required />
-            <button class="btn" type="submit">Join</button>
+            <input type="email" id="newsletter-email" placeholder="Your email ✨" aria-label="Email" required />
+            <button class="btn primary" type="submit">Join</button>
           </form>
         </div>
         <div>
-          <h5>Follow</h5>
-          <p><a href="#">Instagram</a> · <a href="#">Twitter</a></p>
+          <h5><i class="fas fa-sparkles"></i> Connect</h5>
+          <p style="font-size:1.1rem; line-height:2;">
+            <a href="https://pastelpoetics.com" target="_blank"><i class="fas fa-globe"></i> Website</a><br>
+            <a href="https://www.tiktok.com/@pastelpoetics" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a><br>
+            <a href="https://www.instagram.com/pastelpoetics/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a><br>
+            <a href="https://www.facebook.com/share/1A88baKpBp/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a><br>
+            <a href="https://www.goodreads.com/author/show/58859016.Yaya_Starchild" target="_blank"><i class="fab fa-goodreads"></i> Goodreads</a>
+          </p>
+          <p style="margin-top:1rem;">Email: <a href="mailto:faeriepoetics@gmail.com">faeriepoetics@gmail.com</a></p>
         </div>
       </div>
-      <p class="copy">© 2025 Yaya Starchild — All rights reserved.</p>
+      <p class="copy">© 2025 Yaya Starchild • Pastel Poetics • Made with magic <i class="fas fa-wand-sparkles"></i> and stardust <i class="fas fa-star"></i></p>
     </footer>
+    
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -113,4 +149,3 @@
     </script>
   </body>
 </html>
-here
