--- a/product.html
+++ b/product.html
@@ -4,16 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Product — Yaya Starchild</title>
-  <meta name="description" content="Product details" />
-  <meta property="og:type" content="book" />
-  <meta property="og:title" content="Suncatcher Spirit - Yaya Starchild" />
-  <meta property="og:description" content="Suncatcher Spirit — poetry collection out Oct 25, 2025." />
-  <meta property="og:image" content="assets/suncatcher-1.jpg" />
+    <meta name="description" content="Magical treasures from Yaya Starchild" />
+    <meta property="og:type" content="book" />
+    <meta property="og:title" content="Suncatcher Spirit - Yaya Starchild" />
+    <meta property="og:description" content="Suncatcher Spirit — poetry collection out Oct 25, 2025." />
+    <meta property="og:image" content="assets/suncatcher-1.jpg" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="icon" href="/favicon.ico">
     <script defer src="products.js"></script>
     <script defer src="app.js"></script>
   </head>
-  <head>
+  <body>
+    <a class="skip-link" href="#main">Skip to content</a>
     <header class="site-header">
       <div class="brand">
         <a href="index.html"><img src="logo.svg" alt="Yaya Starchild logo" class="logo"/></a>
@@ -22,18 +26,15 @@
           <p class="tag">Whimsical poet who hopes to leave you enchanted.</p>
         </div>
       </div>
-    <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="icon" href="/favicon.ico">
       <nav class="nav">
         <a href="index.html">Home</a>
-    <a class="skip-link" href="#main">Skip to content</a>
-    <header class="site-header">
+        <a href="shop.html">Shop</a>
         <a href="about.html">About the Author</a>
         <a href="cart.html" id="nav-cart">Cart (<span id="nav-cart-count">0</span>)</a>
       </nav>
     </header>
 
-  <main id="main" class="container product-page" role="main">
+    <main id="main" class="container product-page" role="main">
       <div id="product-detail" class="product-detail">
         <!-- populated by products.js -->
       </div>
@@ -53,11 +54,23 @@
     <footer class="site-footer">
       <div class="container footer-grid">
         <div>
-          <h5>About Yaya</h5>
+          <h5><i class="fas fa-feather"></i> About Yaya</h5>
           <p>Yaya Starchild writes small, luminous poems for readers who collect light.</p>
         </div>
+        <div>
+          <h5><i class="fas fa-envelope-open-text"></i> Newsletter</h5>
+          <p>Subscribe for magical updates and exclusive offerings.</p>
+        </div>
+        <div>
+          <h5><i class="fas fa-sparkles"></i> Follow</h5>
+          <p>
+            <a href="https://www.instagram.com/pastelpoetics/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a><br>
+            <a href="https://www.tiktok.com/@pastelpoetics" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a><br>
+            <a href="https://www.goodreads.com/author/show/58859016.Yaya_Starchild" target="_blank"><i class="fab fa-goodreads"></i> Goodreads</a>
+          </p>
+        </div>
       </div>
-      <p class="copy">© 2025 Yaya Starchild</p>
+      <p class="copy">© 2025 Yaya Starchild • Pastel Poetics • Made with magic <i class="fas fa-wand-sparkles"></i> and stardust <i class="fas fa-star"></i></p>
     </footer>
   </body>
 </html>
