--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="book" />
     <meta property="og:title" content="Suncatcher Spirit - Yaya Starchild" />
     <meta property="og:description" content="Suncatcher Spirit — poetry collection out Oct 25, 2025." />
-    <meta property="og:image" content="assets/suncatcher-1.jpg" />
+    <meta property="og:image" content="assets/suncatcher-cover.jpg" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="manifest" href="/manifest.webmanifest">
@@ -46,7 +46,7 @@
         "author": {"@type":"Person","name":"Yaya Starchild"},
         "datePublished":"2025-10-25",
         "description": "A collection of luminous poems by Yaya Starchild.",
-        "image": "assets/suncatcher-1.jpg"
+        "image": "assets/suncatcher-cover.jpg"
       }
       </script>
     </main>
