--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a class="skip-link" href="#main">Skip to content</a>
     <header class="site-header">
       <div class="brand">
-        <a href="index.html"><img src="logo.svg" alt="Yaya Starchild logo" class="logo"/></a>
+        <a href="index.html"><img src="assets/logo-new.jpg" alt="Yaya Starchild logo" class="logo"/></a>
         <div>
           <h1>Yaya Starchild</h1>
           <p class="tag">Whimsical poet who hopes to leave you enchanted.</p>
@@ -48,7 +48,7 @@
       <section class="hero-left reveal-left">
         <h2 class="eyebrow"><i class="fas fa-wand-sparkles"></i> ✨ A Fairy Tale Collection ✨ <i class="fas fa-wand-sparkles"></i></h2>
         <h3 class="title">Suncatcher Spirit</h3>
-        <p class="lead">✨ A marriage of higher-self discovery and inner-child love — a sprinkle of fairy dust to reacquaint yourself with your childlike wonder. ✨ This enchanted debut collection invites you into a magical realm where poetry dances with illustrations, and every page sparkles with whimsy. Return to nature and your sense of wonder with playfully-introspective metaphors, mystical incantations, and fairy-kissed verses you can whisper whenever you need a reminder of your magic. 🧚‍♀️</p>
+        <p class="lead">✨ A marriage of higher-self discovery and inner-child love — a sprinkle of fairy dust to reacquaint yourself with your childlike wonder. ✨ This enchanted debut collection invites you into a magical realm where poetry dances with illustrations, and every page sparkles with whimsy. Return to nature and your sense of wonder with playfully-introspective metaphors, mystical incantations, and fairy-kissed incantations you can whisper whenever you need a reminder of your magic. 🧚‍♀️</p>
         <div class="cta-row">
           <a class="btn primary" href="#buy-links"><i class="fas fa-wand-magic-sparkles"></i> Get Your Copy</a>
           <a class="btn ghost" href="shop.html"><i class="fas fa-shop"></i> Explore Merch</a>
@@ -62,7 +62,7 @@
     <section class="container features">
       <article class="reveal">
         <h4><i class="fas fa-wand-magic-sparkles"></i> ✨ Enchanting Poetry ✨</h4>
-        <p>64 pages of luminous verses exploring love, loss, resilience, and present-moment magic. Featuring playful nursery rhymes, fairy-tale metaphors, mystical incantations, and whimsical illustrations that dance across each page. 🌟</p>
+        <p>64 pages of luminous incantations exploring love, loss, resilience, and present-moment magic. Featuring playful nursery rhymes, fairy-tale metaphors, mystical incantations, and whimsical illustrations that dance across each page. 🌟</p>
       </article>
       <article class="reveal">
         <h4><i class="fas fa-heart"></i> 🧚‍♀️ For Dreamers & Hearts</h4>
@@ -261,7 +261,7 @@
           "@type": "Organization",
           "name": "Yaya Starchild",
           "url": "http://example.com",
-          "logo": "http://example.com/logo.svg"
+          "logo": "http://example.com/assets/logo-new.jpg"
         },
         {
           "@type": "WebSite",
