--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <article class="product-card active" onclick="window.location.href='product.html?id=3'" style="cursor:pointer;">
           <div style="width:100%; max-height:30vh; overflow:hidden; display:flex; align-items:center; justify-content:center; background:rgba(255,255,255,0.15); border-radius:12px;">
-            <img src="assets/sticker-pack.svg" alt="Suncatcher Sticker Pack" loading="eager" style="width:100%; height:100%; max-height:30vh; object-fit:contain; object-position:center;"/>
+            <img src="assets/sticker_Dancing.jpg" alt="Suncatcher Sticker Pack" loading="eager" style="width:100%; height:100%; max-height:30vh; object-fit:contain; object-position:center;"/>
           </div>
           <h3><i class="fas fa-sparkles"></i> Suncatcher Sticker Pack</h3>
           <p style="opacity:0.95;">6 pastel stickers — perfect for laptops, journals, and water bottles. SKU: STK-SS-001</p>
