Connect Render server for Stripe payment processing
INTEGRATION COMPLETE:
- Added Render server URL to checkout.html
- Updated stripe-payments.js to use server-side checkout
- Server endpoint: https://yaya-srv-d3vpra7diees73ai05g0.onrender.com

PAYMENT FLOW:
1. Customer fills checkout form
2. Discount codes applied (SUN10, FAIRY5, MAGIC15)
3. POST to /create-stripe-session on Render server
4. Server creates Stripe Checkout Session with line items
5. Customer redirected to Stripe secure payment page
6. All payment details (card, expiration, CVC) collected by Stripe
7. Success redirect to success.html

RENDER SERVER CONFIGURATION:
- Root Directory: server
- Build Command: npm install
- Start Command: node index.js
- Environment: Node
- Required Env Var: STRIPE_SECRET=sk_live_...

FEATURES ENABLED:
✅ Full shopping cart support
✅ Discount codes working
✅ Multiple products per order
✅ Secure payment processing
✅ Order metadata tracking
✅ Email notifications ready

Server is deployed and ready for production use.

--- a/checkout.html
+++ b/checkout.html
@@ -12,6 +12,13 @@
   <!-- <link rel="manifest" href="/manifest.webmanifest"> -->
   <link rel="icon" href="/favicon.ico">
     <script src="https://js.stripe.com/v3/"></script>
+    <!-- Configure server URL for payment processing -->
+    <script>
+      window.YAYA_CONFIG = {
+        serverUrl: 'https://yaya-srv-d3vpra7diees73ai05g0.onrender.com',
+        stripePublishableKey: 'pk_live_51SM7yMRMDdiM5E9AoXPdpUxWXxK3h2ZlOwy2hbqwp4o2BHAr2bM30LKSuNv8AdeMJV0l6nfhvIa2Hzxny8VI9GQx00dDiIoUZ6'
+      };
+    </script>
     <script src="error-monitor.js"></script>
     <script src="cookie-consent.js"></script>
     <script src="data-handler.js"></script>
