Update Render server URL to production endpoint (yaya-1dc3.onrender.com) and add deploy hook

--- a/checkout.html
+++ b/checkout.html
@@ -15,7 +15,7 @@
     <!-- Configure server URL for payment processing -->
     <script>
       window.YAYA_CONFIG = {
-        serverUrl: 'https://yaya-srv-d3vpra7diees73ai05g0.onrender.com',
+        serverUrl: 'https://yaya-1dc3.onrender.com',
         stripePublishableKey: 'pk_live_51SM7yMRMDdiM5E9AoXPdpUxWXxK3h2ZlOwy2hbqwp4o2BHAr2bM30LKSuNv8AdeMJV0l6nfhvIa2Hzxny8VI9GQx00dDiIoUZ6'
       };
     </script>
