--- a/payment-diagnostic.html
+++ b/payment-diagnostic.html
@@ -70,7 +70,7 @@
       <div style="margin-top: 2rem; padding: 1rem; background: #f8f9fa; border-radius: 4px;">
         <h3>Manual Verification Links</h3>
         <ul>
-          <li><a href="https://yaya-srv-d3vpra7diees73ai05g0.onrender.com" target="_blank">Test Render Server</a></li>
+          <li><a href="https://yaya-1dc3.onrender.com" target="_blank">Test Render Server</a></li>
           <li><a href="https://dashboard.render.com/web/srv-d3vpra7diees73ai05g0" target="_blank">Render Dashboard</a></li>
           <li><a href="checkout.html">Checkout Page</a></li>
           <li><a href="cart.html">Shopping Cart</a></li>
@@ -80,7 +80,7 @@
   </main>
 
   <script>
-    const serverUrl = 'https://yaya-srv-d3vpra7diees73ai05g0.onrender.com';
+    const serverUrl = 'https://yaya-1dc3.onrender.com';
     
     async function runAllChecks() {
       const resultsDiv = document.getElementById('results');
