--- a/test-render-server.html
+++ b/test-render-server.html
@@ -10,7 +10,7 @@
   
   <script>
     async function testServer() {
-      const serverUrl = 'https://yaya-srv-d3vpra7diees73ai05g0.onrender.com';
+      const serverUrl = 'https://yaya-1dc3.onrender.com';
       const resultDiv = document.getElementById('result');
       
       try {
