System audit: Fix SEO URLs, standardize STRIPE_SECRET_KEY, add comprehensive audit report
- Fixed placeholder example.com URLs in index.html schema, sitemap.xml, robots.txt
- Updated all docs to use STRIPE_SECRET_KEY consistently (removed old STRIPE_SECRET references)
- Created comprehensive system audit report with all findings and fixes
- Added test-checkout-flow.html diagnostic tool
- Identified critical Stripe API key whitespace issue in Render (requires manual fix)

--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
         {
           "@type": "Organization",
           "name": "Yaya Starchild",
-          "url": "http://example.com",
-          "logo": "http://example.com/assets/logo-new.jpg"
+          "url": "https://pastelpoetics.com",
+          "logo": "https://pastelpoetics.com/assets/logo-new.jpg"
         },
         {
           "@type": "WebSite",
-          "url": "http://example.com",
+          "url": "https://pastelpoetics.com",
           "name": "Yaya Starchild",
-          "potentialAction": {"@type":"SearchAction","target":"http://example.com/search?q={search_term_string}","query-input":"required name=search_term_string"}
+          "potentialAction": {"@type":"SearchAction","target":"https://pastelpoetics.com/search?q={search_term_string}","query-input":"required name=search_term_string"}
         },
         {
           "@type":"Book",
